--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ facebook_appid:   # APP ID for like button, remove from /_includes/share.html if
 google_analytics: # Set tracking, remove from /javascripts/basic.js if unwanted.
 share:            false # Turn on twitter and facebook share buttons
 
-baseurl: '/baruch'
-url: 'https://andysaktia.github.io'
+#baseurl: ''
+url: 'https://andysaktia.github.io/baruch'
 
 
 links:
